# SpaceShooter

./: .gitignore  CMakeLists.txt  build.sh  control.h  convex.cpp  convex.h  inc.cpp  inc.h  levels.cpp  levels.h  main.cpp  menu.cpp  menu.h  model_creator.cpp  models.cpp  models.h  sprites.cpp  sprites.h
levels/: level1.linfo
models/enemy/: enemy.minfo
models/hero/: hero.minfo
